--- a/app/faq.jade
+++ b/app/faq.jade
@@ -12,40 +12,35 @@ block content
         a(href="") FAQ
         a(href="") Контакты
       .clrfx
+  .faq-product-main
+    img(src="images/faq-gastal-main.png")
   .body-top
     .holder
-      .visual
       .info
         .title
           img(src="images/label-top-index.png")
         ul.green-dot
-          p против
           li изжоги,
           li боли,
           li тяжести в желудке<sup>1</sup>.
-        a.btn(href="") Инструкция
-  .midle-row
-    .holder
-      .col
-        img.visual(src="images/ico-magic-66.png")
-        .text.
-          Быстро и надолго
-          устраняет изжогу<sup>1</sup>
-      .col
-        img.visual(src="images/ico-chery-75.png")
-        .text.
-          Выпускается<br>
-          в трех вкусах
-      .col
-        img.visual(src="images/ico-family-47.png")
-        .text.
-          Разрешен взрослым<br>
-          и детям с 6 лет<sup>1</sup>
+  .faq-block
+    .faq-left
+      .faq-tip “ В данном разделе  представлены ответы на часто задаваемые вопросы о медицинском препарате Гастал® ”
+      .faq-product-image
+        img(src="images/faq-product.png")
+    .faq-right
+      .faq-title Часто задаваемые вопросы
+      ul.faq-list
+        each i in [1,2,3,4,5,6,7,8,9,10]
+          li.js-faq-question
+            .faq-question В каком случае следует обратиться к врачу?
+            .faq-answer.js-faq-answer
+              p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+              p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+              p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+              p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
 
   .body-bottom
-    .wrapper
-      .title Традиционный или со вкусами мяты и вишни
-      p Гастал выпускается в форме вишневых и мятных таблеток для рассасывания, а также в форме таблеток для рассасывания без вкусовых добавок.
     #footer
       .small-text
         p.
@@ -59,6 +54,6 @@ block content
           Москва, ул. Шаболовка, д.10, стр.2, бизнес-центр «Конкорд»<br>
           Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235/36">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
       .warn
-        .holder.
+        .holder
           ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ к применению.
           ознакомьтесь<br> с инструкцией или проконсультируйтесь у специалиста.
