--- a/app/styles/_main-menu.scss
+++ b/app/styles/_main-menu.scss
@@ -3,6 +3,7 @@
   position: absolute;
   margin-top: 52px;
   overflow: hidden;
+  z-index: 1;
   .wrapper {
     width: 990px;
     margin: 0 auto;
