--- a/app/faq.jade
+++ b/app/faq.jade
@@ -1,20 +1,14 @@
 extends layout
 
+block vars
+  - var active = "faq"
+
 block content
-  #main-menu
-    .wrapper
-      a.logo(href="index.html")
-        img(src="images/logo-gastal-210.png")
-      .holder
-        a.active(href="") О Гастале
-        a(href="") Специалистам
-        a(href="") Статьи
-        a(href="") FAQ
-        a(href="") Контакты
-      .clrfx
   .faq-product-main
     img(src="images/faq-gastal-main.png")
-  .body-top
+  .body-top.body-top-about
+    .about-main-product
+      img(src="images/about-top-product.png")
     .holder
       .info
         .title
@@ -23,7 +17,7 @@ block content
           li изжоги,
           li боли,
           li тяжести в желудке<sup>1</sup>.
-  .faq-block
+  .faq-block.faq-page
     .faq-left
       .faq-tip “ В данном разделе  представлены ответы на часто задаваемые вопросы о медицинском препарате Гастал® ”
       .faq-product-image
@@ -31,15 +25,62 @@ block content
     .faq-right
       .faq-title Часто задаваемые вопросы
       ul.faq-list
-        each i in [1,2,3,4,5,6,7,8,9,10]
-          li.js-faq-question
-            .faq-question В каком случае следует обратиться к врачу?
-            .faq-answer.js-faq-answer
-              p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-              p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-              p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-              p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
-
+        li.js-faq-question
+          .faq-question В каком случае следует обратиться к врачу?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Препарат лечит причину изжоги или только снимает симптомы на некторое время?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Каковы преимущества Гастал®  перед другими препаратами от изжоги и тяжести в желудке?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Каковы преимущества Гастал®  перед другими препаратами от изжоги и тяжести в желудке?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Какие побочные эффекты у Гастал®?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Используется ли Гастал® при хронических заболеваниях?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Можно использовать Гастал® для профилактики?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+        li.js-faq-question
+          .faq-question Можно использовать Гастал® для профилактики?
+          .faq-answer.js-faq-answer
+            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
+            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
+            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
+            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
   .body-bottom
     #footer
       .small-text
