--- a/app/contacts.jade
+++ b/app/contacts.jade
@@ -1,42 +1,39 @@
 extends layout
 
 block vars
-  - var body = "index"
+  - var active = "contacts"
 
 block content
-  .body-top
+  .faq-product-main
+    img(src="images/faq-gastal-main.png")
+  .body-top.body-top-about
+    .about-main-product
+      img(src="images/about-top-product.png")
     .holder
-      .visual
       .info
         .title
           img(src="images/label-top-index.png")
         ul.green-dot
-          li против изжоги,
+          li изжоги,
           li боли,
           li тяжести в желудке<sup>1</sup>.
-        a.btn(href="") Инструкция
-  .midle-row
-    .holder
-      .col
-        img.visual(src="images/ico-magic-66.png")
-        .text.
-          Быстро и надолго
-          устраняет изжогу<sup>1</sup>
-      .col
-        img.visual(src="images/ico-chery-75.png")
-        .text.
-          Выпускается<br>
-          в трех вкусах
-      .col
-        img.visual(src="images/ico-family-47.png")
-        .text.
-          Разрешен взрослым<br>
-          и детям с 6 лет<sup>1</sup>
+  .contact-block
+    #map
+    .map-info
+      .info-block
+        p.title Адрес офиса:
+        p ООО "Тева", бизнес-центр «Конкорд»<br>119049, г.Москва, ул. Шаболовка, 10, стр.2
+      .info-block
+        p.title Контактная информация:
+        p.info-lines
+          | Тел: <a href="tel:+74956442234">+7 495 644-22-34</a>
+          br
+          | Факс: <a href="tel:+74956442235">+7 495 644-22-35/36</a>
+          br
+          | E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>
+
 
   .body-bottom
-    .wrapper
-      .title Традиционный или со вкусами мяты и вишни
-      p Гастал выпускается в форме вишневых и мятных таблеток для рассасывания, а также в форме таблеток для рассасывания без вкусовых добавок.
     #footer
       .small-text
         p.
@@ -50,6 +47,6 @@ block content
           Москва, ул. Шаболовка, д.10, стр.2, бизнес-центр «Конкорд»<br>
           Тел. <a href="tel:+74956442234">+7 495 644-22-34</a>, факс <a href="tel:+74956442235/36">+7 495 644-22-35/36</a>. E-mail: <a href="mailto:info@teva.ru">info@teva.ru</a>, <a href="http://www.teva.ru">www.teva.ru</a>
       .warn
-        .holder.
+        .holder
           ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ к применению.
           ознакомьтесь<br> с инструкцией или проконсультируйтесь у специалиста.
