--- a/app/styles/_index.scss
+++ b/app/styles/_index.scss
@@ -1,9 +1,12 @@
 .body-top {
   width: 100%;
-  background: url('../images/bg-index-top.jpg');
+  //background: url('../images/bg-index-top.jpg');
   height: 600px;
   background-position: center top;
   background-repeat: no-repeat;
+  &.body-top-about {
+    height: 410px;
+  }
   .holder {
     width: 990px;
     margin: 0 auto;
@@ -134,7 +137,7 @@
 }
 
 .body-bottom {
-  background: url('../images/bg-index-bottom.jpg');
+  //background: url('../images/bg-index-bottom.jpg');
   width: 100%;
   background-position: center -200px;
   background-repeat: no-repeat;
@@ -168,7 +171,7 @@
 #footer {
   width: 990px;
   margin: 0 auto;
-  margin-top: 86px;
+  margin-top: 35px;
   margin-bottom: 36px;
   .small-text {
     font-size: 11px;
