small text fixes

--- a/app/about.jade
+++ b/app/about.jade
@@ -27,38 +27,38 @@ block content
     .faq-right
       .faq-title инструкция по медицинскому применению
       ul.faq-list
-        li.js-faq-question.child-1
+        li.js-faq-question.child-1.opened
           .faq-question Общая информация о препарате
-          .faq-answer.js-faq-answer
-            p Препарат Гастал® не оказывает системного действия у пациентов с нормальной функцией почек. 
+          .faq-answer.js-faq-answer(style="display:block;")
+            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
             p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
             p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
         li.js-faq-question.child-2
           .faq-question Фармакокинетика
           .faq-answer.js-faq-answer
-            p Препарат Гастал® не оказывает системного действия у пациентов с нормальной функцией почек. 
+            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
             p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
             p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
         li.js-faq-question.child-3
           .faq-question Применение
           .faq-answer.js-faq-answer
-            p Препарат Гастал® не оказывает системного действия у пациентов с нормальной функцией почек. 
+            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
             p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
             p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
         li.js-faq-question.child-4
           .faq-question Особые указания
           .faq-answer.js-faq-answer
-            p Препарат Гастал® не оказывает системного действия у пациентов с нормальной функцией почек. 
+            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
             p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
             p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
   .body-bottom
     #footer
       .small-text
         p.
-          <sup>1</sup> Инструкция по медицинскому применению препарата Гастал®.
+          <sup>1</sup> Инструкция по медицинскому применению препарата Гастал<sup>&reg;</sup>.
           Тяжесть в желудке, боль в желудке и пищеводе — симптомы диспепсических явлений.
           Быстро — немедленно (сразу после приема), надолго — продолжительно (около 2-х часов).
-        .shiza Гастал®. Антацидное средство.
+        .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
           Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
