--- a/app/faq.jade
+++ b/app/faq.jade
@@ -19,76 +19,40 @@ block content
           li тяжести в желудке<sup>1</sup>.
   .faq-block.faq-page
     .faq-left
-      .faq-tip “ В данном разделе  представлены ответы на часто задаваемые вопросы о медицинском препарате Гастал® ”
+      .faq-tip “ В данном разделе  представлены ответы на часто задаваемые вопросы о медицинском препарате Гастал<sup>&reg;</sup> ”
       .faq-product-image
         img(src="images/faq-product.png")
     .faq-right
       .faq-title Часто задаваемые вопросы
       ul.faq-list
         li.js-faq-question
-          .faq-question В каком случае следует обратиться к врачу?
+          .faq-question Надо ли разжевывать таблетку Гастала<sup>&reg;</sup> или лучше просто запить ее водой?
           .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+            p Таблетки Гастала<sup>&reg;</sup> не рекомендуется проглатывать целиком и запивать водой.
+            p Разжевывать или измельчать их тоже не нужно! Таблетку следует постепенно рассасывать во рту.
         li.js-faq-question
-          .faq-question Препарат лечит причину изжоги или только снимает симптомы на некторое время?
+          .faq-question Чем Гастал<sup>&reg;</sup> отличается от обычной соды и подобных средств?
           .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+            p Основное различие заключается в механизме действия Гастала<sup>&reg;</sup>.
+            p За счет сбалансированного состава Гастал<sup>&reg;</sup> действует быстро и надолго*, не вызывая повторных приступов изжоги.
+            p Магния гидроксид - обеспечивает немедленную нейтрализацию соляной кислоты желудочного сока, избавляя от изжоги, а
+            p Алюминия гидроксида-магния карбоната гель – отвечает за продолжительное действие, избавляя от боли и тяжести.
         li.js-faq-question
-          .faq-question Каковы преимущества Гастал®  перед другими препаратами от изжоги и тяжести в желудке?
+          .faq-question С какого возраста разрешено применение препарата Гастала<sup>&reg;</sup>?
           .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+            p Применение Гастала<sup>&reg;</sup> возможно у детей с 6 лет.<sup>1</sup>
         li.js-faq-question
-          .faq-question Каковы преимущества Гастал®  перед другими препаратами от изжоги и тяжести в желудке?
+          .faq-question Как долго Гастал<sup>&reg;</sup> работает?
           .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
-        li.js-faq-question
-          .faq-question Какие побочные эффекты у Гастал®?
-          .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
-        li.js-faq-question
-          .faq-question Используется ли Гастал® при хронических заболеваниях?
-          .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
-        li.js-faq-question
-          .faq-question Можно использовать Гастал® для профилактики?
-          .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
-        li.js-faq-question
-          .faq-question Можно использовать Гастал® для профилактики?
-          .faq-answer.js-faq-answer
-            p Гастал® полностью устраняет негативные факторы благодаря комбинированному составу и особой природной структуре молекулы. 
-            p Магния гидроксид (Mg(OH)2)— невсасывающееся небуферное антацидное средство. Быстро нейтрализует избыток кислоты в желудке, устраняет чувство жжения и болье. 
-            p Алюминия Гидроксид (Al(OH)3) длительное время контролирует уровень кислотности.Способствует восстановлению поврежденных клеток слизистой оболочки.
-            p Слоисто-сетчатая структура Алюминиево-Магниевого комплекса поглощает факторы агрессии: желчные кислоты, лизолецитин, пепсин. Выводит агрессивные компоненты из организма. 
+            p Действие Гастала<sup>&reg;</sup> длится около 2 часов.<sup>1</sup>
   .body-bottom
     #footer
       .small-text
         p.
-          <sup>1</sup> Инструкция по медицинскому применению препарата Гастал®.
+          <sup>1</sup> Инструкция по медицинскому применению препарата Гастал<sup>&reg;</sup>.
           Тяжесть в желудке, боль в желудке и пищеводе — симптомы диспепсических явлений.
           Быстро — немедленно (сразу после приема), надолго — продолжительно (около 2-х часов).
-        .shiza Гастал®. Антацидное средство.
+        .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
           Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
