--- a/app/index.jade
+++ b/app/index.jade
@@ -40,10 +40,10 @@ block content
     #footer
       .small-text
         p.
-          <sup>1</sup> Инструкция по медицинскому применению препарата Гастал®.
+          <sup>1</sup> Инструкция по медицинскому применению препарата Гастал<sup>&reg;</sup>.
           Тяжесть в желудке, боль в желудке и пищеводе — симптомы диспепсических явлений.
           Быстро — немедленно (сразу после приема), надолго — продолжительно (около 2-х часов).
-        .shiza Гастал®. Антацидное средство.
+        .shiza Гастал<sup>&reg;</sup>. Антацидное средство.
         p.
           За дополнительной информацией обращаться:
           Общество с Ограниченной Ответственностью «Тева» Россия, 119049,
