--- a/app/about.jade
+++ b/app/about.jade
@@ -27,30 +27,103 @@ block content
     .faq-right
       .faq-title инструкция по медицинскому применению
       ul.faq-list
-        li.js-faq-question.child-1.opened
-          .faq-question Общая информация о препарате
-          .faq-answer.js-faq-answer(style="display:block;")
-            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
-            p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
-            p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
-        li.js-faq-question.child-2
-          .faq-question Фармакокинетика
+        li.js-faq-question
+          .faq-question Состав
           .faq-answer.js-faq-answer
-            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
-            p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
-            p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
-        li.js-faq-question.child-3
-          .faq-question Применение
+            p В одной таблетке содержится: <em>активные вещества:</em> алюминия гидроксида-магния карбоната гель 450,0 мг, магния гидроксид 300,0 мг; <em>вспомогательные вещества:</em> маннитол (E421) 120,0 мг, сорбитол (E420) 50,00 мг, лактозы моногидрат 30,00 мг, крахмал кукурзный 75,80 мг, натрия цикламат 7,00 мг, натрия сахаринат 0,20 мг, тальк 28,00 мг, магния стеарат 6,00 мг, ароматизатор мяты перечной 3,00 мг.
+        li.js-faq-question
+          .faq-question Описание
           .faq-answer.js-faq-answer
-            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
-            p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
-            p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
-        li.js-faq-question.child-4
+            p Круглый таблетки от белого до кремового цвета с гладкой поверхностью и фаской. 
+        li.js-faq-question
+          .faq-question Фармодинамика
+          .faq-answer.js-faq-answer
+            p Препарат Гастал<sup>&reg;</sup> — комбинированное антацидное средство, которое снижает повышенную кислотность желудочного сока и не оказывает стимулирующего влияния на секрецию желудочного сока. Алюминия гидроксида-магния карбоната гель и магния гидроксид обеспечивают немедленную (сразу же после приема) и продолжительную (около 2 часов) нейтрализацию соляной кислоты желудочного сока, с поддержание кислотности в желудке на физиологическом уровне (pH 3-5). Одна таблетка Гастал<sup>&reg;</sup> нейтрализует 21,5 ммоль соляной кислоты.
+            p Препарат Гастал<sup>&reg;</sup> подавляет действие пенсина, лизолецитина и желчных кислот, устраняет диспепсические явления. Усиливает защитные и регенетативные процессы в слизистой оболочке желудка. Ионы алюминия оказывают цитопротективное действие за счет повышения секреции муцина и натрия гидрокарбоната, активации простагландина E2 и N0, накопления эпидермального фактора росто в месте повреждения слизистой оболочки, повышения концентрации фосфолипидов в стенках желудка.
+        li.js-faq-question
+          .faq-question Фармокинетика
+          .faq-answer.js-faq-answer
+            p Препарат Гастал<sup>&reg;</sup> не оказывает системного воздействия у поциентов с нормальной функцией почек. После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосватами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. Магния гидроксид реагирует с соляной кислотой в желудочном соке с образование магния хлорида, обладающего осмотическими свойствами и мягким слабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната. 
+        li.js-faq-question
+          .faq-question Показания к применению
+          .faq-answer.js-faq-answer
+            p - Диспепсические явления, такие как дискомфорт или боль в эпигастрии, изжога, кислая отрыжка после погрешностей в диете, избыточного употребления этанола, кофе, никотина и т.п.;
+            p - диспепсические явления, такие как дискомфорт или боль в эпигастрии, изжога, кислая отрыжка (и их профилактика), возникающие в результате применения некоторых лекарственных препаратов (нестероидные противовоспалительные препараты, глюкокортикостероиды и др.);
+            p - cостояния, сопровождающиеся повышенным кислотообразованием: язвенная болезнь желудка, гастрит, рефлюкс-эзофагит; грыжа пищеводного отверстия диафрагмы.
+        li.js-faq-question
+          .faq-question Противопоказания
+          .faq-answer.js-faq-answer
+            p Повышенная чувствительность к солям алюминия, магния или другим компонентам препарата; тяжелая почечная недостаточность; болезнь Альцгеймера; гипофосфатемия; непереносимость лактозы, дефицит лактазы или глюкозо-галактозная мальабсорбция; детский возраст до 6 лет.
+        li.js-faq-question
+          .faq-question С осторожностью
+          .faq-answer.js-faq-answer
+            p При хронической почечной недостаточности (ХПН), беременности и в период грудного вскармливания, взрослые и дети старше 12 лет с массой тела менее 50 кг, детский возраст от 6 до 12 лет, пожилой возраст.
+        li.js-faq-question
+          .faq-question Применение при беременности и в период грудного вскармливания
+          .faq-answer.js-faq-answer
+            p Препарат Гастал<sup>&reg;</sup> не выделяется с грудным молоком. При применении во время беременности и в период грудного вскармливания необходимо оценить соотношение пользы для матери и риска для плода и младенца.
+        li.js-faq-question
+          .faq-question Способы применения и дозы
+          .faq-answer.js-faq-answer
+            p Внутрь, постепенно рассасывая во рту.
+            p
+              em 
+                u Взрослые и дети старше 12 лет с массой тела не менее 50 кг
+            p По 1-2 таблетки 4-6 раз в день приблизительно через 1 час после приема пищи и перед сном, но не более 8 таблеток в сутки. Продолжительность приема не более 2 недель. Аналогичные дозы рекомендуются для лечения изжоги независимо от приема пищи.
+            p 
+              em 
+                u Взрослые и дети старше 12 лет с массой тела менее 50 кг, дети в возрасте от 6 до 12 лет 
+            p Доза составляет половину от рекомендованной дозы для взрослых и детей старше 12 лет с массой тела не менее 50 кг. Продолжительность приема не более 2 недель.
+            p
+              em
+                u Пациенты с ПХН
+            p Коррекция дозы не требуется. Продолжительность приема не более 2 недель.
+        li.js-faq-question
+          .faq-question Передозировка
+          .faq-answer.js-faq-answer
+            p Симптомы осторой передозировки не описаны.
+            p При длительном применении высоких доз препаратов, содержащих алюминий и магний, возможно развитие гипофосфатемии, гипокальцемии, гиперкальциурии, остеомаляции, остеопороза, гипермагниемии, гипералюминиемии, энцефалопатии, нефрокальциноза и нарушение функции почек. Возможно развитие более выраженных нежелательных реакций со стороны желудочно-кишечного тракта (ЖКТ) (запор, диария), у пациентов с почечной недостаточностью - жажды, снижения артериального давления, гиперофлексии. 
+            p Лечение: симптоматическая терапия. 
+        li.js-faq-question
+          .faq-question Побочное действие
+          .faq-answer.js-faq-answer
+            p При использовании препарата в рекомендуемых дозах побочные реакции встречаются редко (не менее 0,01%, но менее 0,1%): тошнота, запор, диарея, изменение вкусовых ощущений. В исключительных случаях возможны аллергические реакции. 
+        li.js-faq-question
+          .faq-question Взаимодействие с другими лекарственными средствами
+          .faq-answer.js-faq-answer
+            p Препарат Гастал<sup>&reg;</sup> при одновременном применении усиливает активность леводопы и налидиксовой кислоты, снижает и замедляет абсорбцию хинолонов, изониазида, напроксена, препаратов железа, индометацина, аминазина, бета-адреноблокаторов, дифлунисала, блокаторов H2-гистоминовых рецепторов, жирорастворимых витаминов, непрямых антикоагулянтов, барбитуратов.
+            p При взаимодействии с ионами металлов, входящих в состав антацидов, тетрациклины образуют нерастворимые хелатные комплексы; в результате данного взаимодействия всасывание тетрациклинов уменьшает более чем на 90%. Одновременный прием данных препаратов невозможен. При необходимости сочетанного применения, тетрациклин следует принимать не менее чем за 2 часа до приема антацида.
+            p В присутствии гидроокисей алюминия и магния, содержащихся в антациде, всасывание ципрофлоксацина и офлоксацина уменьшается на 50-90%. 
+            p В присутствии антацидов биодоступность каптоприла существенно снижается, а сочетанное применение антацидов и метопролола приводит к уменьшению концентрации метопролола в плазме крови.
+            p Одновременное применение высоких доз антацидов может снижать всасывание ранитидина на 10-33%.
+            p Применение антацидов не влиеят на биодоступность амоксициллина, цевалексина и комбинации амоксициллина и клавулановой кислоты, однако может существенно снижать всасывание доксициклина из ЖКТ. 
+            p Повышение pH мочи на фоне терапиции антацидами может способствовать повышению канальцевой реабсорбции основных (щелочных) лекарственных средств и снижать реабсорбцию кислых соединений. Антациды могут снижать и замедлять абсорбцию салицилатов, в том числе ацетилсалициловой кислоты, а также, повышая рН мочи, способствовать более быстрому выведению салицилатов с мочой из организма, с сопутствующим снижением их концентрации в сыворотке крови на 30-70%.
+            p Всасывание сердечных гликозидов, в том числе дигоксина и дигитоксина, при одновременном применении с антацидами существенно не уменьшается. М-холиноблокаторы, замедляя моторику желудка, увеличивают продолжительность действия препарата Гастал<sup>&reg;</sup>.
+            p С целью предотвращения возможного взаимодействия препарата Гастал<sup>&reg;</sup> с другими лекарственными препаратами рекомендуется его прием за 1 час до или через 1 час после их применения.
+        li.js-faq-question
           .faq-question Особые указания
           .faq-answer.js-faq-answer
-            p Препарат Гастал<sup>&reg;</sup> не оказывает системного действия у пациентов с нормальной функцией почек. 
-            p После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосфатами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. 
-            p Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягкимслабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната.
+            p Не следует превышать рекомендуемые дозы и продолжительность лечения при применении у пациентов с нарушением функции почек.
+        li.js-faq-question
+          .faq-question Влияние на способность у управлению транспортом и работу с техникой
+          .faq-answer.js-faq-answer
+            p Применение препарата Гастал<sup>&reg;</sup> не оказывает влияния на способность к вождению автотранспорта и управлению другими механизмами. 
+        li.js-faq-question
+          .faq-question Форма выпуска
+          .faq-answer.js-faq-answer
+            p Таблетки для рассасывания.
+            p По 6 таблеток в блистер из ПВХ/алюминиевой фольги.
+            p По 2, 4, 5, 8 или 10 блистеров вместе с инструкцией по применению в картонную пачку.
+        li.js-faq-question
+          .faq-question Условия хранения
+          .faq-answer.js-faq-answer
+            p Хранить при температуре не выше 25 °С.
+            p Хранить в недоступном для детей месте.
+        li.js-faq-question
+          .faq-question Срок годности
+          .faq-answer.js-faq-answer
+            p 3 года.
+            p Не применять после истечения срока годности, указанного на упаковке.
   .body-bottom
     #footer
       .small-text
