--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -82,7 +82,7 @@
                         margin-top: 15px;
                     }
                 }
-                &:before {
+                /* &:before {
                     content: "";
                     width: 22px;
                     height: 22px;
@@ -109,9 +109,9 @@
                     &:before {
                         background-image: url(../images/about-list_4.png);
                     }
-                }
+                } */
 
-                &.opened {
+                /* &.opened {
                     .faq-question {
                         font-weight: 600;
                         color: #9c243d;
@@ -144,7 +144,7 @@
                             background-image: url(../images/about-list_4active.png);
                         }
                     }
-                }
+                } */
             }
         }
     }
