--- a/app/index.jade
+++ b/app/index.jade
@@ -14,7 +14,7 @@ block content
           li против изжоги,
           li боли,
           li тяжести в желудке<sup>1</sup>.
-        a.btn(href="") Инструкция
+        a.btn(href="/uploads/instruction.pdf", target="_blank") Инструкция
   .midle-row
     .holder
       .col
