--- a/app/about.jade
+++ b/app/about.jade
@@ -27,23 +27,23 @@ block content
     .faq-right
       .faq-title инструкция по медицинскому применению
       ul.faq-list
-        li.js-faq-question
+        li.js-faq-question.opened
           .faq-question Состав
-          .faq-answer.js-faq-answer
+          .faq-answer.js-faq-answer(style="display:block;")
             p В одной таблетке содержится: <em>активные вещества:</em> алюминия гидроксида-магния карбоната гель 450,0 мг, магния гидроксид 300,0 мг; <em>вспомогательные вещества:</em> маннитол (E421) 120,0 мг, сорбитол (E420) 50,00 мг, лактозы моногидрат 30,00 мг, крахмал кукурзный 75,80 мг, натрия цикламат 7,00 мг, натрия сахаринат 0,20 мг, тальк 28,00 мг, магния стеарат 6,00 мг, ароматизатор мяты перечной 3,00 мг.
         li.js-faq-question
           .faq-question Описание
           .faq-answer.js-faq-answer
-            p Круглый таблетки от белого до кремового цвета с гладкой поверхностью и фаской. 
+            p Круглые таблетки от белого до кремового цвета с гладкой поверхностью и фаской. 
         li.js-faq-question
           .faq-question Фармодинамика
           .faq-answer.js-faq-answer
-            p Препарат Гастал<sup>&reg;</sup> — комбинированное антацидное средство, которое снижает повышенную кислотность желудочного сока и не оказывает стимулирующего влияния на секрецию желудочного сока. Алюминия гидроксида-магния карбоната гель и магния гидроксид обеспечивают немедленную (сразу же после приема) и продолжительную (около 2 часов) нейтрализацию соляной кислоты желудочного сока, с поддержание кислотности в желудке на физиологическом уровне (pH 3-5). Одна таблетка Гастал<sup>&reg;</sup> нейтрализует 21,5 ммоль соляной кислоты.
-            p Препарат Гастал<sup>&reg;</sup> подавляет действие пенсина, лизолецитина и желчных кислот, устраняет диспепсические явления. Усиливает защитные и регенетативные процессы в слизистой оболочке желудка. Ионы алюминия оказывают цитопротективное действие за счет повышения секреции муцина и натрия гидрокарбоната, активации простагландина E2 и N0, накопления эпидермального фактора росто в месте повреждения слизистой оболочки, повышения концентрации фосфолипидов в стенках желудка.
+            p Препарат Гастал<sup>&reg;</sup> - комбинированное антацидное средство, которое снижает повышенную кислотность желудочного сока и не оказывает стимулирующего влияния на секрецию желудочного сока. Алюминия гидроксида-магния карбоната гель и магния гидроксид обеспечивают немедленную (сразу же после приема) и продолжительную (около 2 часов) нейтрализацию соляной кислоты желудочного сока, с поддержанием кислотности в желудке на физиологическом уровне (pH 3-5). Одна таблетка Гастал<sup>&reg;</sup> нейтрализует 21,5 ммоль соляной кислоты.
+            p Препарат Гастал<sup>&reg;</sup> подавляет действие пенсина, лизолецитина и желчных кислот, устраняет диспепсические явления. Усиливает защитные и регенетативные процессы в слизистой оболочке желудка. Ионы алюминия оказывают цитопротективное действие за счет повышения секреции муцина и натрия гидрокарбоната, активации простагландина E2 и N0, накопления эпидермального фактора роста в месте повреждения слизистой оболочки, повышения концентрации фосфолипидов в стенках желудка.
         li.js-faq-question
           .faq-question Фармокинетика
           .faq-answer.js-faq-answer
-            p Препарат Гастал<sup>&reg;</sup> не оказывает системного воздействия у поциентов с нормальной функцией почек. После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосватами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. Магния гидроксид реагирует с соляной кислотой в желудочном соке с образование магния хлорида, обладающего осмотическими свойствами и мягким слабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната. 
+            p Препарат Гастал<sup>&reg;</sup> не оказывает системного воздействия у пациентов с нормальной функцией почек. После взаимодействия с соляной кислотой желудочного сока алюминия гидроксид реагирует с фосватами и карбонатами в щелочной среде кишечника и выделяется с калом в виде нерастворимых солей. Магния гидроксид реагирует с соляной кислотой в желудочном соке с образованием магния хлорида, обладающего осмотическими свойствами и мягким слабительным действием, которое нейтрализует закрепляющее действие алюминия гидроксида в тонком кишечнике. Ионы магния выделяются с калом в виде нерастворимого карбоната. 
         li.js-faq-question
           .faq-question Показания к применению
           .faq-answer.js-faq-answer
@@ -82,7 +82,7 @@ block content
           .faq-question Передозировка
           .faq-answer.js-faq-answer
             p Симптомы осторой передозировки не описаны.
-            p При длительном применении высоких доз препаратов, содержащих алюминий и магний, возможно развитие гипофосфатемии, гипокальцемии, гиперкальциурии, остеомаляции, остеопороза, гипермагниемии, гипералюминиемии, энцефалопатии, нефрокальциноза и нарушение функции почек. Возможно развитие более выраженных нежелательных реакций со стороны желудочно-кишечного тракта (ЖКТ) (запор, диария), у пациентов с почечной недостаточностью - жажды, снижения артериального давления, гиперофлексии. 
+            p При длительном применении высоких доз препаратов, содержащих алюминий и магний, возможно развитие гипофосфатемии, гипокальцемии, гиперкальциурии, остеомаляции, остеопороза, гипермагниемии, гипералюминиемии, энцефалопатии, нефрокальциноза и нарушение функции почек. Возможно развитие более выраженных нежелательных реакций со стороны желудочно-кишечного тракта (ЖКТ) (запор, диарея), у пациентов с почечной недостаточностью - жажды, снижения артериального давления, гиперофлексии. 
             p Лечение: симптоматическая терапия. 
         li.js-faq-question
           .faq-question Побочное действие
@@ -92,7 +92,7 @@ block content
           .faq-question Взаимодействие с другими лекарственными средствами
           .faq-answer.js-faq-answer
             p Препарат Гастал<sup>&reg;</sup> при одновременном применении усиливает активность леводопы и налидиксовой кислоты, снижает и замедляет абсорбцию хинолонов, изониазида, напроксена, препаратов железа, индометацина, аминазина, бета-адреноблокаторов, дифлунисала, блокаторов H2-гистоминовых рецепторов, жирорастворимых витаминов, непрямых антикоагулянтов, барбитуратов.
-            p При взаимодействии с ионами металлов, входящих в состав антацидов, тетрациклины образуют нерастворимые хелатные комплексы; в результате данного взаимодействия всасывание тетрациклинов уменьшает более чем на 90%. Одновременный прием данных препаратов невозможен. При необходимости сочетанного применения, тетрациклин следует принимать не менее чем за 2 часа до приема антацида.
+            p При взаимодействии с ионами металлов, входящих в состав антацидов, тетрациклины образуют нерастворимые хелатные комплексы; в результате данного взаимодействия всасывание тетрациклинов уменьшается более чем на 90%. Одновременный прием данных препаратов невозможен. При необходимости сочетанного применения, тетрациклин следует принимать не менее чем за 2 часа до приема антацида.
             p В присутствии гидроокисей алюминия и магния, содержащихся в антациде, всасывание ципрофлоксацина и офлоксацина уменьшается на 50-90%. 
             p В присутствии антацидов биодоступность каптоприла существенно снижается, а сочетанное применение антацидов и метопролола приводит к уменьшению концентрации метопролола в плазме крови.
             p Одновременное применение высоких доз антацидов может снижать всасывание ранитидина на 10-33%.
