--- a/app/about.jade
+++ b/app/about.jade
@@ -83,7 +83,7 @@ block content
           .faq-answer.js-faq-answer
             p Симптомы осторой передозировки не описаны.
             p При длительном применении высоких доз препаратов, содержащих алюминий и магний, возможно развитие гипофосфатемии, гипокальцемии, гиперкальциурии, остеомаляции, остеопороза, гипермагниемии, гипералюминиемии, энцефалопатии, нефрокальциноза и нарушение функции почек. Возможно развитие более выраженных нежелательных реакций со стороны желудочно-кишечного тракта (ЖКТ) (запор, диарея), у пациентов с почечной недостаточностью - жажды, снижения артериального давления, гиперофлексии. 
-            p Лечение: симптоматическая терапия. 
+            p <em>Лечение</em>: симптоматическая терапия. 
         li.js-faq-question
           .faq-question Побочное действие
           .faq-answer.js-faq-answer
